--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body>
+    <body id = "page-top">
         {% include nav.html %}
-
             {{ content }}
-
         {% include footer.html %}
     </body>
+    {% include scripts.html %}
 </html>
