--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-{% include head.html %}
-<body id="page-top">
-  {% include nav.html %}
-  {% include header.html %}
-  {% include call-to-action.html %}
-  {% include services.html %}
-  {% include past-events.html %}
-  {% include aside.html %}
-  {% include contact.html %}
-  {% include scripts.html %}
-</body>
-</html>
+---
+layout: default
+---
+{% include header.html %}
+{% include call-to-action.html %}
+{% include services.html %}
+{% include past-events.html %}
+{% include aside.html %}
+{% include contact.html %}
