New handeling of things through scss files

--- a/_includes/blog/head.html
+++ b/_includes/blog/head.html
@@ -10,9 +10,9 @@
   <!-- Bootstrap core CSS -->
   <link href="{{ "/assets/blog/css/bootstrap.css" | prepend: site.baseurl }}" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="{{ "/assets/blog/css/style.css" | prepend: site.baseurl }}" rel="stylesheet">
-  <link href="{{ "/assets/blog/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="{{" /assets/blog/css/main.css" | prepend: site.baseurl }}" type="text/css">
+  <link href="{{ "/assets/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Custom CSS -->
   <!--<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">-->
