--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,9 +1,9 @@
 ---
-layout: default
+layout: landing-default
 ---
-{% include header.html %}
-{% include call-to-action.html %}
-{% include services.html %}
-{% include past-events.html %}
-{% include aside.html %}
-{% include contact.html %}
+{% include landing/header.html %}
+{% include landing/call-to-action.html %}
+{% include landing/services.html %}
+{% include landing/past-events.html %}
+{% include landing/aside.html %}
+{% include landing/contact.html %}
