--- a/_includes/landing/head.html
+++ b/_includes/landing/head.html
@@ -5,20 +5,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Lab code</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{" /css/bootstrap.min.css" | prepend: site.baseurl }}" type="text/css">
+    <link rel="stylesheet" href="{{" /assets/landing/css/bootstrap.min.css" | prepend: site.baseurl }}" type="text/css">
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{" /font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type="text/css">
+    <link rel="stylesheet" href="{{" /assets/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{{" /css/animate.min.css" | prepend: site.baseurl }}" type="text/css">
+    <link rel="stylesheet" href="{{" /assets/landing/css/animate.min.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{" /css/main.css" | prepend: site.baseurl }}" type="text/css">
+    <link rel="stylesheet" href="{{" /assets/landing/css/main.css" | prepend: site.baseurl }}" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
