--- a/assets/landing/css/main.scss
+++ b/assets/landing/css/main.scss
@@ -33,12 +33,11 @@
 //     }
 // }
 
-// variables.less
-$theme-primary: #F05F40;
-$theme-dark: #222;
+
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "mixins",
-        "base"
+  "colordefinitions",
+  "mixins",
+  "landingbase"
 ;
