Cleaned out some things, adds layout for event

--- a/_sass/_colordefinitions.scss
+++ b/_sass/_colordefinitions.scss
@@ -6,3 +6,4 @@ $theme-link: $theme-primary;
 $theme-link-hover: darken($theme-primary, 10%);
 $theme-footer-content: white;
 $theme-footer-heading: $theme-secondary;
+//$theme-primary: #F05F40;
