--- a/_includes/blog/nav.html
+++ b/_includes/blog/nav.html
@@ -13,11 +13,8 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
-        <li {% if page.title == "Projects" %}class="active"{% endif %}><a href="{{"/research/" | prepend: site.baseurl }}">RESEARCH PROJECTS</a></li>
-        <li {% if page.title == "Hobbies" %}class="active"{% endif %}><a href="{{"/hobbies/" | prepend: site.baseurl }}">HOBBIES</a></li>
         <li {% if page.title == "Blog" %}class="active"{% endif %}><a href="{{"/blog/" | prepend: site.baseurl }}">BLOG</a></li>
-        <li {% if page.title == "About me" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">ABOUT</a></li>
-        <li {% if page.title == "Contact" %}class="active"{% endif %}><a href="{{"/contact/" | prepend: site.baseurl }}">CONTACT</a></li>
+        <li {% if page.title == "About us" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">ABOUT</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
