moves stuff areund. separates things

--- a/_includes/landing/nav.html
+++ b/_includes/landing/nav.html
@@ -17,7 +17,10 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <li><a href="{{"/events/" | prepend: site.baseurl }}">Events</a></li>
+                  <a href="{{"/events/" | prepend: site.baseurl }}">Events</a>
+                </li>
+                <li>
+                  <a href="{{"/blog/" | prepend: site.baseurl }}">Blog</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
