--- a/_includes/blog/sidebar.html
+++ b/_includes/blog/sidebar.html
@@ -10,7 +10,7 @@
   <div class="hline"></div>
   {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
     <p>
-      <a href="{{ '/category/#'  | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first | capitalize }}</a>
+      <a href="{{ '/category/'  | prepend: site.baseurl  }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first | capitalize }}</a>
       <span class="badge badge-theme pull-right">{{ category | last | size }}</span>
     </p>
   {% endunless %}{% endfor %}
