--- a/_includes/landing/past-events.html
+++ b/_includes/landing/past-events.html
@@ -4,7 +4,7 @@
       {% for event in site.categories['past-event'] limit:6 %}
         <div class="col-lg-4 col-sm-6">
           <a href="{{ event.url | prepend: site.baseurl }}" class="portfolio-box">
-            <img class="img-responsive" src="{{ "/img/events/" | prepend: site.baseurl }}{{ event.img }}">
+            <img class="img-responsive" src="{{ "/assets/img/events/" | prepend: site.baseurl }}{{ event.img }}">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
