--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -6,9 +6,9 @@ layout: blog-default
     <! -- SINGLE POST -->
     <div class="col-lg-8 col-lg-offset-2">
       <! -- Blog Post  -->
-      <p><img class="img-responsive" src="{{ "/assets/img/posts/" | prepend: site.baseurl }}{{ page.img }}"></p>
+      <p><img class="img-responsive" src="{{ "/assets/img/events/" | prepend: site.baseurl }}{{ page.img }}"></p>
       <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ page.title }}</h3></a>
-      <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
+      <p><csmall>{{ page.meetingDate | date: "%b %-d, %Y" }}. | By: {{ page.author }} | At: {{page.meetingPlace}}</csmall></p>
         {{ content }}
       <div class="spacing"></div>
     </div><! --/col-lg-12 -->
