--- a/_includes/landing/call-to-action.html
+++ b/_includes/landing/call-to-action.html
@@ -5,7 +5,17 @@
                 <h2 class="section-heading">Upcomming events</h2>
                 <hr class="light">
                 <p class="text-faded">Closest upcomming event: </p>
-                <a href="#" class="btn btn-default btn-xl">Get to it</a>
+                {% assign events = site.events | where: "categories", "upcoming" %}
+                {% if events %}{% assign sorted_events = events | sort: "meetingDate" %}{% endif %}
+                {% if sorted_events %}
+                  {% for event in sorted_events limit: 1 %}
+                    <p>
+                      <h3>{{ event.title }}</h3>
+                      {{ event.meetingDate | date: "%b %-d, %Y" }} at {{ event.meetingPlace}}
+                    </p>
+                    <a href="{{event.url}}" class="btn btn-default btn-xl">Get to it</a>
+                  {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
