--- a/_includes/landing/header.html
+++ b/_includes/landing/header.html
@@ -1,10 +1,10 @@
 <header>
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1>Lab code</h1>
-            <hr>
-            <p>Community to help non programming graduate students with their programming projects. Promoting clean, readible and shareable scientific code. </p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
-        </div>
+  <div class="header-content">
+    <div class="header-content-inner">
+      <h1>Lab code</h1>
+      <hr>
+      <p> {{site.about}} </p>
+      <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
+  </div>
 </header>
