--- a/_layouts/blog-default.html
+++ b/_layouts/blog-default.html
@@ -4,7 +4,7 @@
   <body>
     {% include blog/nav.html %}
       {{ content }}
-    {% include blog/footer.html %}
-    {% include blog/js.html %}
+    {% include footer.html %}
+    {% include js.html %}
   </body>
 </html>
