--- a/_layouts/landing-default.html
+++ b/_layouts/landing-default.html
@@ -4,7 +4,7 @@
     <body id = "page-top">
         {% include landing/nav.html %}
         {{ content }}
-        {% include landing/footer.html %}
+        {% include footer.html %}
     </body>
-    {% include landing/scripts.html %}
+    {% include js.html %}
 </html>
