Adds better navbar to both styles

--- a/_layouts/blog-default.html
+++ b/_layouts/blog-default.html
@@ -2,7 +2,8 @@
 <html>
   {% include blog/head.html %}
   <body>
-    {% include blog/nav.html %}
+    {% include nav.html %}
+    {%include blog/wrap.html %}
       {{ content }}
     {% include footer.html %}
     {% include js.html %}
