--- a/assets/blog/css/main.scss
+++ b/assets/blog/css/main.scss
@@ -36,6 +36,7 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
   "colordefinitions",
+  "mixins",
   "commonbase",
   "blogbase",
   "prettyphoto",
