--- a/_layouts/landing-default.html
+++ b/_layouts/landing-default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include landing/head.html %}
-    <body id = "page-top">
-        {% include landing/nav.html %}
-        {{ content }}
-        {% include footer.html %}
-    </body>
-    {% include js.html %}
+  {% include landing/head.html %}
+  <body id = "page-top">
+    {% include nav.html %}
+      {{ content }}
+    {% include footer.html %}
+  </body>
+  {% include js.html %}
 </html>
