--- a/_includes/blog/members.html
+++ b/_includes/blog/members.html
@@ -1,6 +1,6 @@
 <div class="container mtb">
   <div class="row centered">
-    <h3 class="mb">Who are we</h3>
+    <h3 class="mb">Members</h3>
     {% for member in site.data.members %}
       <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
         <div class="he-wrap tpl6">
