--- a/_includes/landing/services.html
+++ b/_includes/landing/services.html
@@ -11,14 +11,14 @@
         <div class="row">
             <div class="col-lg-3 col-lg-offset-3 col-md-6 text-center">
                 <div class="service-box">
-                    <a href="https://github.com/lab-code/"><i class="fa fa-4x fa-github wow bounceIn text-primary"></i></a>
+                    <a href="https://github.com/lab-code/"><i class="fa fa-4x fa-github text-primary"></i></a>
                     <h3>Github</h3>
                     <p class="text-muted">Repository for educational and common projects</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <a href="https://lab-code.slack.com/"><i class="fa fa-4x fa-slack wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <a href="https://lab-code.slack.com/"><i class="fa fa-4x fa-slack text-primary"></i></a>
                     <h3>Slack</h3>
                     <p class="text-muted">Channels to communicate more effectively</p>
                 </div>
