--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,13 +14,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="{{"/about/" | prepend: site.baseurl }}">About</a>
-        </li>
-        <li>
           <a href="{{"/events/" | prepend: site.baseurl }}">Events</a>
         </li>
         <li>
+            <a href="https://lab-code.github.io/coding-versioning/">Codex</a>
+        </li>
+        <li>
           <a href="{{"/blog/" | prepend: site.baseurl }}">Blog</a>
+        </li>
+        <li>
+            <a href="{{"/about/" | prepend: site.baseurl }}">About</a>
         </li>
       </ul>
     </div>
