--- a/_includes/landing/past-events.html
+++ b/_includes/landing/past-events.html
@@ -3,10 +3,10 @@
     <div class="row no-gutter">
       {% assign events = site.events %}
       {% if events %}
-        {% assign sorted_events = events | sort: "meetingDate" %}
+        {% assign sorted_events = events | sort: "meetingDate" | reverse %}
       {% endif %}
       {% if sorted_events %}
-        {% for event in sorted_events reversed limit: 6 %}
+        {% for event in sorted_events limit: 6 %}
         <div class="col-lg-4 col-sm-6">
           <a href="{{ event.url | prepend: site.baseurl }}" class="portfolio-box">
             <img class="img-responsive" src="{{ "/assets/img/events/" | prepend: site.baseurl }}{{ event.img }}">
